--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face {font-family:OpenSans;src:url("../fonts/OpenSans-Regular.ttf");}
 *{box-sizing:border-box;font-family:'OpenSans',sans-serif;}
-html,body{padding:0px;margin:0px;width:100%;height:100%;background-image:url('../imgs/images/back.png');background-position:center;background-size:cover;}
+html,body{padding:0px;margin:0px;width:100%;height:100%;background-image:url('../imgs/images/back.png');background-position:center;background-size:cover;background-attachment:fixed;}
 a,a:active{text-decoration:none;color:inherit;}
 header{position:fixed;width:100%;height:60px;background-color:white;box-shadow:0px 0px 8px #666666;}
 #topo{width:1144px;height:60px;margin:0px auto;}
@@ -81,7 +81,7 @@ footer{float:left;width:100%;background-color:black;color:white;}
 
 #fundo{display:none;position:absolute;width:100%;height:100%;background-color:black;opacity:0;transition:opacity 0.5s;}
 #popup{display:none;position:absolute;width:50%;left:25%;background-color:white;padding:2%;border-radius:10px;box-shadow:0px 2px 4px #666666;transform:scale(0);transition:transform 0.5s;}
-.cancel{cursor:pointer;position:absolute;right:16px;top:16px;width:36px;}
+.cancel{cursor:pointer;position:absolute;right:8px;top:8px;width:36px;}
 .cancel img{width:36px;}
 #popup #title_popup{font-size:1.5em;text-align:center;width:80%;margin-left:10%;margin-bottom:5%;}
 #popup input[type=text]{width:40%;padding:1%;margin-bottom:0%;margin-right:2%;}
@@ -104,11 +104,64 @@ footer{float:left;width:100%;background-color:black;color:white;}
 #erro_assunto_form{float:left;color:red;margin-top:-5%;margin-bottom:2%;}
 #erro_msg_form{float:left;color:red;margin-top:-5%;margin-bottom:2%;}
 
-#person1{background:red;}
-#person1:hover{background:orange;}
-#person2{background:blue;}
-#person2:hover{background:green;}
+#foguete{display:block;}
+#menu{display:none;}
 
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
+@media screen and (max-width: 1210px) {
+  #topo{width:100%;}
+  .content{width:95%;margin-left:2.5%;}
+  #rodape{width:95%;margin-left:2.5%;}
+  #content_bottom{width:100%;}
+}
+
+@media screen and (max-width: 1102px) {
+  #popup input[type=text]{width:100%;margin-bottom:2%;}
+  #popup input[type=submit]{width:auto;padding:1% 5%;}
+  #home #right_home #mockup_home{height:auto;width:90%;}
+}
+
+@media screen and (max-width: 724px) {
+  #foguete{display:none;}
+  #home #right_home #mockup_home{display:none;}
+  #home #left_home{width:100%;}
+
+  #menu{display:block;float:right;height:48px;margin-top:6px;margin-right:6px;}
+  #menu img{height:100%;}
+
+  #topo nav{position:fixed;width:85%;height:100%;background-color:white;box-shadow:4px 0px 8px #666666;left:-90%;}
+  #topo nav ul{margin:0px;padding:0px;}
+  #topo nav ul li{display:block;margin:19px;font-size:16px;}
+  #topo nav #emp li{display:block;margin:3px;font-size:16px;padding:8px 16px 8px 16px;background-color:#652C90;border-radius:5px;color:white;}
+  #topo nav ul li:hover{color:#652C90;}
+  #topo nav #emp li:hover{color:white;}
+  #topo nav ul .social_topo{margin:13px;float:right;height:34px;width:34px;border:1px solid #652C90;border-radius:50%;}
+  #topo nav ul .social_topo:hover{background-color:#652C90;}
+  #topo nav ul .social_topo img{height:24px;margin:4px;}
+}
+
+@media screen and (max-width: 716px) {
+  #contato #formulario{width:100%;}
+  #contato #right_contato{float:left;width:100%;padding-left:0%;border-left:0px;padding-top:10%;border-top:1px solid #652C90;}
+  #rodape #menu_user{float:left;width:100%;}
+  #rodape #menu_emp{float:left;width:100%;margin-top:5%;}
+  #rodape #facebook{float:left;width:100%;margin-top:5%;margin-bottom:5%;}
+
+  #bottom input[type=text]{width:90%;margin:1%;}
+  #bottom input[type=submit]{width:auto;margin:1%;padding:1% 3%;}
+
+  #popup input[type=text]{width:100%;margin-bottom:3%;padding:2%;}
+  #popup input[type=submit]{width:auto;padding:2% 7%;}
+}
+
+@media screen and (max-width: 540px) {
+  #popup{width:90%;left:5%;}
+  #home #left_home #buttons_home .button_store{width:57%;margin-bottom:5%;}
+}
+
+@media screen and (max-width: 430px) {
+  #home #left_home #buttons_home .button_store{width:67%;}
 }
